# Gstreamer-Sox

./: README.md  app.py  result.txt  streamer.py
static/: record.sh  style.css  style2.css  video-js.css
stream/: CMakeLists.txt
stream/src/: gst_video.c
templates/: index1.html  index2.html  index3.html  index4.html
